# GPU-JPEG-Decoder

./: .gitignore  README.md  benchmark_jpeg.cu  cpp-test.yaml  images.py  notes.txt
.github/workflows/: cpp-test.yaml  cuda-test.yaml  test.yaml
Images/: image_converter.py
anova/: anova.py  cuda_throughput.txt  nvjpeg_throughput.txt
benchmark_results/runtime/: benchmark_results_cpp.txt  benchmark_results_cudaB_old.txt  benchmark_results_cudaH.txt  benchmark_results_cudaO.txt  benchmark_results_cudaU.txt  benchmark_results_jpeglib.txt  benchmark_results_nvjpeg.txt  benchmark_results_zune.txt
cpp-decoder/: CMakeLists.txt  Makefile
cpp-decoder/benchmark/: benchmark.cc
cpp-decoder/benchmark_throughput/: CMakeLists.txt  benchmark.cc
cpp-decoder/src/: huffmanTree.h  parser.cpp  parser.h
cpp-decoder/utils/: color.h  stream.cpp
cpp-implementation/: IDCT.cpp  IDCT.h  Makefile  bench.sh  decoder  parser.cpp  utils.cpp
cpp-implementation/benchmark/: benchmark.cc  plot_benchmark.py
cpp-implementation/benchmark_throughput/: benchmark.cc
cpp-implementation/src/: huffmanTree.cpp  idct.cpp  idct.h  parser.cpp  parser.h
cpp-implementation/utils/: color.cpp  color.h  stream.cpp  stream.h
cuda-decoder/: Makefile
cuda-decoder/benchmark/: benchmark.cu
cuda-decoder/benchmark_thoughput/: CMakeLists_new.txt  benchmark.cu  benchmark_bs.cu  benchmark_is.cu  benchmark_ts.cu
cuda-decoder/src/: parser.cu  parser.h
cuda-implementation/: CMakeLists.txt  Makefile  valgrind-out.txt
cuda-implementation-unified/: Makefile
cuda-implementation-unified/src/: huffmanTree.h  parser.cu  parser.h
cuda-implementation-unified/utils/: stream.cu  stream.h
cuda-implementation/benchmark/: CMakeLists.txt  bench.sh  benchmark.cu
cuda-implementation/src/: huffmanTree.cpp  idct.h  parser.cu  parser.h
cuda/src/: IDCT.cu  idct.cpp
cuda0-implementation/: CMakeLists.txt  Makefile  bench.sh  decoder
cuda0-implementation/benchmark/: benchmark.cu
cuda0-implementation/src/: huffmanTree.h  idct.cu  idct.h  parser.cpp
cuda0-implementation/utils/: stream.h
cuda1-implementation/: CMakeLists.txt  Makefile  decoder  main.cpp
cuda1-implementation/benchmark/: benchmark.cu
cuda1-implementation/src/: idct.cpp  idct.cu  idct.h  parser.cpp  parser.cu  parser.h
cuda1-implementation/utils/: stream.cpp  stream.h
cuda2-implementation/: Makefile  main.cpp
cuda2-implementation/benchmark/: benchmark.cu
cuda2-implementation/src/: idct copy.cu  idct.cu  idct_first_try.cu  parser.cpp  parser.cu  parser.h
cuda2_1-implementation/benchmark/: benchmark.cu
cuda2_1-implementation/src/: huffmanTree.cpp  idct.cu  idct.h  parser.cpp  parser.cu  parser.h
cuda3-implementation/: Makefile
cuda3-implementation/benchmark/: benchmark.cu
cuda3-implementation/src/: parser.cu  parser.h
cuda3-implementation/utils/: color.cpp
cudaB-implementation/benchmark/: benchmark.cu
cudaB-implementation/benchmark_thoughput/: benchmark.cu
cudaB-implementation/src/: huffmanTree.cpp  huffmanTree.h  parser.h
cudaB-implementation/utils/: stream.h
cudaH-implementation/: Makefile
cudaH-implementation/benchmark/: CMakeLists.txt  bench.sh  benchmark.cu
cudaH-implementation/benchmark_thoughput/: benchmark.cu
cudaH-implementation/src/: huffmanTree.cpp  parser.cu  parser.h  parser2.cu
cudaH-implementation/utils/: stream.cpp  stream.h  utils.h
cudaO-implementation/: Makefile  main.cu
cudaO-implementation/benchmark/: benchmark.cu
cudaO-implementation/benchmark_thoughput/: CMakeLists.txt  benchmark.cu
cudaO-implementation/src/: huffmanTree.cpp  huffmanTree.h  parser.cu  parser.h  parser2.cu  parser_pipe1.cu  parser_pipe2.cu  parser_prefix.cu  parser_transpose.cu  parser_working.cu  temp.cu
cudaO-implementation/utils/: utils.cu
cudaOB-implementation/: lum.txt  out.txt  red.txt  temp.txt  temp2.txt  yellow.txt
cudaOB-implementation/benchmark/: benchmark.cu
cudaOB-implementation/src/: parser.cu  parser.h
cudaP-implementation/: main.cu
cudaP-implementation/benchmark/: benchmark.cu
cudaP-implementation/benchmark_thoughput/: CMakeLists.txt  benchmark.cu
cudaP-implementation/src/: parser.cu  parser.h
cudaS-implementation/: main.cu  output_old.txt
cudaS-implementation/benchmark/: benchmark.cu
cudaS-implementation/benchmark_thoughput/: bench_profile.sh  benchmark_new.cu
cudaS-implementation/src/: parser.cu
cudaT-implementation/: report.ncu-rep
cudaT-implementation/benchmark_thoughput/: benchmark.cu
cudaT-implementation/src/: parser.cu  parser2.cu  parser_working.cu
cudaT-implementation/utils/: stream.cpp
cudaU-implementation/: CMakeLists.txt  Makefile  gold.txt  valgrind-out.txt
cudaU-implementation/benchmark/: benchmark.cu
cudaU-implementation/benchmark_thoughput/: benchmark.cu
cudaU-implementation/src/: huffmanTree.cpp  huffmanTree2.cpp  parser.cu  parser.h  parser2.cu  parser2.h  parser_one_grid.cu
cudaUF-implementation/: main.cpp  valgrind-out.txt
data_preprocessing/: build_image_dataset.py  image_converter.py  process_benchmark_dataset.py
jpeglib-implementation/: CMakeLists.txt  Makefile  fix.txt  install_libjpeg.sh  main.cpp  process_ppm.py
jpeglib-implementation/benchmark/: benchmark.cc  benchmark_parallel.cc
jpeglib-implementation/benchmark_throughput/: CMakeLists.txt  benchmark.cc
jpeglib-implementation/libjpeg/lib/: libjpeg.la  libjpeg.so.9.5.0
jpeglib-implementation/libjpeg/lib/pkgconfig/: libjpeg.pc
jpeglib-implementation/src/: parser.cpp  parser.h
plots/: GPU-JPEG-Decoder.code-workspace  plot_benchmark.py  plot_benchmark_v2.py  plot_benchmark_v4.py  throughput_boxplot.py  throughput_boxplot_bs.py  throughput_boxplot_is.py  throughput_boxplot_ts.py  throughput_boxplot_v2.py
python-implementation/: decoder.py  huffman_table.py  huffman_tree.py  test.py
src/: IDCT.cu  IDCT.h  Makefile  color.cu  huffmanTree.cu  huffmanTree.h  main.cu  parser.cu  parser.h  utils.cpp  utils.h
testing/: compare.py  compare_files.py  compare_files_with_tolerance.py  compare_with_tolerance.py  display_image.py  temp.txt  temp_gold.txt  test.sh
(+103 files in other folders)
